--- a/тестирование требований.md
+++ b/тестирование требований.md
@@ -1,4 +1,4 @@
-### Пользовательский сценарий по процессу восстановления пароля на сайте henderson.ru ###
+### Пользовательский сценарий по процессу восстановления пароля на сайте [henderson.ru](https://henderson.ru/) ###
 
 Восстановление пароля личного кабинета на сайте возможно 2 путями:
 1. на странице Авторизации в личном кабинете  https://henderson.ru/hlogin/
